test/parser/parameter_list.dmz
// RUN: dmz %s -ast-dump 2>&1 | filecheck %s
// CHECK: [[# @LINE + 1 ]]:6: error: expected parameter declaration
fn f(: void {}

// CHECK: [[# @LINE + 1 ]]:7: error: expected ':'
fn f(x) -> void {}

// CHECK: [[# @LINE + 1 ]]:8: error: expected type expression
fn f(x:) -> void {}

// CHECK: [[# @LINE + 1 ]]:9: error: expected type expression
fn f(x: 1) -> void {}

// CHECK: [[# @LINE + 1 ]]:12: error: expected ')'
fn f(x: i32: void {}

// CHECK: [[# @LINE + 1 ]]:14: error: expected parameter declaration
fn f(x: i32, 2) -> void {}

// CHECK: [[# @LINE + 1 ]]:6: error: expected parameter declaration
fn f(,) -> void {}

fn trailingComma(x:i32,) -> void {}
// CHECK: FunctionDecl trailingComma -> void
// CHECK-NEXT:   ParamDecl:i32 x
// CHECK-NEXT:   Block

fn trailingComma2(
    x:i32, 
    y:i32,
) -> void {}
// CHECK: FunctionDecl trailingComma2 -> void
// CHECK-NEXT:   ParamDecl:i32 x
// CHECK-NEXT:   ParamDecl:i32 y
// CHECK-NEXT:   Block

fn f(x: i32, y: i32) -> void {}
// CHECK: FunctionDecl f -> void
// CHECK-NEXT:   ParamDecl:i32 x
// CHECK-NEXT:   ParamDecl:i32 y
// CHECK-NEXT:   Block

fn main() -> void {}
